Bug 53510 - [chromium] [WebCore] [android] Touch events are missing time stamps
Summary: [chromium] [WebCore] [android] Touch events are missing time stamps
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC All
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 49345
  Show dependency treegraph
 
Reported: 2011-02-01 10:37 PST by Robert Kroeger
Modified: 2011-02-24 02:57 PST (History)
3 users (show)

See Also:


Attachments
p1 for 53510 (5.92 KB, patch)
2011-02-01 10:48 PST, Robert Kroeger
fishd: review-
Details | Formatted Diff | Diff
second patch. (5.90 KB, patch)
2011-02-10 13:38 PST, Robert Kroeger
fishd: review+
commit-queue: commit-queue-
Details | Formatted Diff | Diff
corrected patch (5.86 KB, patch)
2011-02-17 14:32 PST, Robert Kroeger
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Kroeger 2011-02-01 10:37:48 PST
Using eventSender.leapForward enables less flaky layout tests than would a similar layout test using setTimeout. However, leapForward requires the events generated by eventSender to have timestamps. PlatformTouchEvent does not have a such a time stamp. Attached is a proposed patch that adds the event timestamp to a PlatformTouchEvent and sets the field reasonably in a Chrome, Android and Qt context.
Comment 1 Robert Kroeger 2011-02-01 10:48:54 PST
Created attachment 80785 [details]
p1 for 53510
Comment 2 Darin Fisher (:fishd, Google) 2011-02-09 15:17:38 PST
Comment on attachment 80785 [details]
p1 for 53510

View in context: https://bugs.webkit.org/attachment.cgi?id=80785&action=review

> Source/WebKit/chromium/public/WebTouchPoint.h:41
> +    enum TouchIdentifier {

nit: style for enums in WebKit API headers is like this:

enum Foo {
    FooBar,
    FooBaf,
    FooBah
};

so, this could be:

enum Finger {
    FingerFirst,
    FingerSecond,
    FingerThird
};
Comment 3 Robert Kroeger 2011-02-10 13:38:21 PST
Created attachment 82038 [details]
second patch.

Updated to better match WebKit style. Please take another look.
Comment 4 Simon Hausmann 2011-02-15 04:18:00 PST
Comment on attachment 82038 [details]
second patch.

View in context: https://bugs.webkit.org/attachment.cgi?id=82038&action=review

A layout tests would be nice to have for this, too.

> Source/WebKit/chromium/public/WebTouchPoint.h:48
> +    enum Finger {
> +        FingerFirst,
> +        FingerSecond,
> +        FingerThird
> +    };
> +
>      WebTouchPoint()
> -        : id(0)
> +        : id(FingerFirst)

This part looks unrelated to timestamps :)
Comment 5 Darin Fisher (:fishd, Google) 2011-02-15 11:15:01 PST
Comment on attachment 82038 [details]
second patch.

View in context: https://bugs.webkit.org/attachment.cgi?id=82038&action=review

>> Source/WebKit/chromium/public/WebTouchPoint.h:48
>> +        : id(FingerFirst)
> 
> This part looks unrelated to timestamps :)

I think the ChangeLog describes this change too, providing justification for it.
Comment 6 WebKit Commit Bot 2011-02-15 13:14:43 PST
Comment on attachment 82038 [details]
second patch.

Rejecting attachment 82038 [details] from commit-queue.

Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-3', 'land-a..." exit_code: 2

Last 500 characters of output:
Source/JavaScriptCore/runtime/MarkedSpace.cpp
	M	Source/JavaScriptCore/runtime/MarkedBlock.h
	M	Source/JavaScriptCore/runtime/JSCell.h
	M	Source/JavaScriptCore/ChangeLog
r78605 = d57b23ce606e965ed8ac9ef9835b5ca586bdddf9 (refs/remotes/trunk)
	M	Source/WebKit/chromium/ChangeLog
	M	Source/WebKit/chromium/public/WebIDBFactory.h
r78606 = 1f65b9a252bdca09843628701ce29822f460b2c9 (refs/remotes/trunk)
First, rewinding head to replay your work on top of it...
Fast-forwarded master to refs/remotes/trunk.

Full output: http://queues.webkit.org/results/7918024
Comment 7 WebKit Commit Bot 2011-02-16 16:11:31 PST
Comment on attachment 82038 [details]
second patch.

Rejecting attachment 82038 [details] from commit-queue.

Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-4', 'land-a..." exit_code: 1

Last 500 characters of output:
ommit-queue/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 64, in _run
    step(tool, options).run(state)
  File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 57, in run
    if self._has_valid_reviewer(changelog_entry):
  File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 42, in _has_valid_reviewer
    if changelog_entry.reviewer():
AttributeError: 'NoneType' object has no attribute 'reviewer'

Full output: http://queues.webkit.org/results/7917569
Comment 8 Robert Kroeger 2011-02-17 14:32:15 PST
Created attachment 82863 [details]
corrected patch

My last patch had an incorrect ChangeLog entry that made it rejected by the commit queue. The attached patch corrects this. This patch contains no code changes compared to the previous patch.
Comment 9 WebKit Commit Bot 2011-02-24 02:57:44 PST
Comment on attachment 82863 [details]
corrected patch

Clearing flags on attachment: 82863

Committed r79534: <http://trac.webkit.org/changeset/79534>
Comment 10 WebKit Commit Bot 2011-02-24 02:57:50 PST
All reviewed patches have been landed.  Closing bug.