2011-02-24  Robert Kroeger  <rjkroege@chromium.org>

Reviewed by Darin Fisher.

        Added timestamps to PlatformTouchEvent etc.

        PlatformTouchEvent doesn't have a timestamp and so
        eventSender.leapForward cannot be used for touchevent based tests.
        This change adds a timestamp to PlatformTouchEvent and initializes
        it in a reasonable manner on Android and Qt platforms.

        [chromium] [WebCore] [android] Touch events are missing time stamps
        https://bugs.webkit.org/show_bug.cgi?id=53510

        * platform/PlatformTouchEvent.h:
        (WebCore::PlatformTouchEvent::PlatformTouchEvent):
        (WebCore::PlatformTouchEvent::timestamp):
        * platform/android/PlatformTouchEventAndroid.cpp:
        (WebCore::PlatformTouchEvent::PlatformTouchEvent):
        * platform/qt/PlatformTouchEventQt.cpp:
        (WebCore::PlatformTouchEvent::PlatformTouchEvent):
2011-02-24  Robert Kroeger <rjkroege@chromium.org>

        Reviewed by Darin Fisher.

        Added timestamps to PlatformTouchEvent etc.

        PlatformTouchEvent doesn't have a timestamp and so
        eventSender.leapForward cannot be used for touchevent based tests.
        This change constructs PlatformTouchEvents with timestamps
        provided from a WebTouchEvent on chromium. It also adds an enum
        to make code referring to specific WebTouchPoints easier to read.

        [chromium] [WebCore] [android] Touch events are missing time stamps
        https://bugs.webkit.org/show_bug.cgi?id=53510

        * public/WebTouchPoint.h:
        (WebKit::WebTouchPoint::WebTouchPoint):
        * src/WebInputEventConversion.cpp:
        (WebKit::PlatformTouchEventBuilder::PlatformTouchEventBuilder):

Canonical link: https://commits.webkit.org/69454@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79534 268f45cc-cd09-0410-ab3c-d52691b4dbfc