Source/WebCore/platform/android/PlatformTouchEventAndroid.cpp
@@ -25,6 +25,7 @@
 
 #include "config.h"
 #include "PlatformTouchEvent.h"
+#include <wtf/CurrentTime.h>
 
 #if ENABLE(TOUCH_EVENTS)
 
@@ -40,6 +41,7 @@ enum AndroidMetaKeyState {
 PlatformTouchEvent::PlatformTouchEvent(const Vector<IntPoint>& windowPoints, TouchEventType type, PlatformTouchPoint::State state, int metaState)
     : m_type(type)
     , m_metaKey(false)
+    , m_timestamp(WTF::currentTime())
 {
     m_touchPoints.reserveCapacity(windowPoints.size());
     for (unsigned c = 0; c < windowPoints.size(); c++)
