Source/WebCore/platform/qt/PlatformTouchEventQt.cpp
@@ -22,6 +22,7 @@
 
 #include "config.h"
 #include "PlatformTouchEvent.h"
+#include <wtf/CurrentTime.h>
 
 #if ENABLE(TOUCH_EVENTS)
 
@@ -42,6 +43,7 @@ PlatformTouchEvent::PlatformTouchEvent(QTouchEvent* event)
     m_altKey = (event->modifiers() & Qt::AltModifier);
     m_shiftKey = (event->modifiers() & Qt::ShiftModifier);
     m_metaKey = (event->modifiers() & Qt::MetaModifier);
+    m_timestamp = WTF::currentTime();
 }
 
 }
