Source/WebKit/chromium/src/WebInputEventConversion.cpp
@@ -221,6 +221,7 @@ PlatformTouchEventBuilder::PlatformTouchEventBuilder(Widget* widget, const WebTo
     m_altKey = event.modifiers & WebInputEvent::AltKey;
     m_shiftKey = event.modifiers & WebInputEvent::ShiftKey;
     m_metaKey = event.modifiers & WebInputEvent::MetaKey;
+    m_timestamp = event.timeStampSeconds;
 
     for (int i = 0; i < event.touchPointsLength; ++i)
         m_touchPoints.append(PlatformTouchPointBuilder(widget, event.touchPoints[i]));
